wip: tree selector for roles
